# drone-raspberrypi-pico

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
sdk/: CMakeLists.txt  Cargo.toml  build.rs  lib.rs  wrapper.h
src/: heap.rs  lib.rs  stream.rs  thr.rs
src/drv/: clock.rs  freq_counter.rs  mod.rs  pll.rs  resets.rs  watchdog.rs  xosc.rs
src/drv/spi/: mod.rs
src/map/: mod.rs  reg.rs  thr.rs
src/map/periph/: clock.rs  div.rs  dma.rs  dma_ch.rs  fc0.rs  fifo.rs  gpio.rs  interp.rs  mod.rs  pads_bank0.rs  pads_qspi.rs  resets.rs  rosc.rs  spi.rs  spinlock.rs  watchdog.rs  xosc.rs
src/map/periph/clock/: Cargo.toml  lib.rs
src/map/periph/gpio/: Cargo.toml  lib.rs  mod.rs
src/map/periph/pll/: Cargo.toml  lib.rs  mod.rs
src/map/periph/watchdog/: mod.rs
src/map/periph/xosc/: mod.rs
src/map/pieces/: Cargo.toml  build.rs  lib.rs
src/map/pieces/1/: Cargo.toml  build.rs
src/map/pieces/10/: Cargo.toml  build.rs
src/map/pieces/11/: Cargo.toml  build.rs
src/map/pieces/12/: Cargo.toml  build.rs
src/map/pieces/2/: Cargo.toml  build.rs
src/map/pieces/3/: Cargo.toml  build.rs
src/map/pieces/4/: Cargo.toml  build.rs
src/map/pieces/5/: Cargo.toml  build.rs
src/map/pieces/6/: Cargo.toml  build.rs  lib.rs
src/map/pieces/7/: Cargo.toml  build.rs
src/map/pieces/8/: Cargo.toml  build.rs
src/map/pieces/9/: Cargo.toml  build.rs  lib.rs
src/map/pieces/traits/: Cargo.toml  lib.rs
src/multicore/: macros.rs  mod.rs
src/reg/: field.rs  marker.rs  mod.rs  prelude.rs
svd/: Cargo.toml
svd/src/: lib.rs
tests/: heap.rs  multicore_macros.rs  stream.rs
