[workspace]
members = [
    "sdk",
    "gen",
    "src/map/pieces",
    "src/map/pieces/traits",
    "src/map/pieces/1",
    "src/map/pieces/2",
    "src/map/pieces/3",
    "src/map/pieces/4",
    "src/map/pieces/5",
    "src/map/pieces/6",
    "src/map/pieces/7",
    "src/map/pieces/8",
    "src/map/pieces/9",
    "src/map/pieces/10",
    "src/map/pieces/11",
    "src/map/pieces/12",
    "src/map/periph/clock",
    "src/map/periph/gpio",
    "src/map/periph/pll",
]

[workspace.package]
version = "0.15.0"
authors = ["Valentyn Valiaiev <valentine.valyaeff@gmail.com>"]
edition = "2021"
repository = "https://github.com/drone-os/drone-raspberrypi-pico"
homepage = "https://www.drone-os.com/"
license = "MIT OR Apache-2.0"

[workspace.dependencies.drone-raspberrypi-pico-sdk]
version = "=0.15.0"
path = "sdk"

[workspace.dependencies.drone-raspberrypi-pico-gen]
version = "=0.15.0"
path = "gen"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces]
version = "=0.15.0"
path = "src/map/pieces"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-traits]
version = "=0.15.0"
path = "src/map/pieces/traits"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-1]
version = "=0.15.0"
path = "src/map/pieces/1"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-2]
version = "=0.15.0"
path = "src/map/pieces/2"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-3]
version = "=0.15.0"
path = "src/map/pieces/3"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-4]
version = "=0.15.0"
path = "src/map/pieces/4"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-5]
version = "=0.15.0"
path = "src/map/pieces/5"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-6]
version = "=0.15.0"
path = "src/map/pieces/6"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-7]
version = "=0.15.0"
path = "src/map/pieces/7"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-8]
version = "=0.15.0"
path = "src/map/pieces/8"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-9]
version = "=0.15.0"
path = "src/map/pieces/9"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-10]
version = "=0.15.0"
path = "src/map/pieces/10"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-11]
version = "=0.15.0"
path = "src/map/pieces/11"

[workspace.dependencies.drone-raspberrypi-pico-map-pieces-12]
version = "=0.15.0"
path = "src/map/pieces/12"

[workspace.dependencies.drone-raspberrypi-pico-map-periph-clock]
version = "=0.15.0"
path = "src/map/periph/clock"

[workspace.dependencies.drone-raspberrypi-pico-map-periph-gpio]
version = "=0.15.0"
path = "src/map/periph/gpio"

[workspace.dependencies.drone-raspberrypi-pico-map-periph-pll]
version = "=0.15.0"
path = "src/map/periph/pll"

[workspace.dependencies.drone-config]
version = "0.15.0"
path = "../drone/config"

[workspace.dependencies.drone-core]
version = "0.15.0"
path = "../drone-core"
features = ["xip"]

[workspace.dependencies.drone-cortexm]
version = "0.15.0"
path = "../drone-cortexm"

[workspace.dependencies.drone-svd]
version = "0.15.0"
path = "../drone-svd"

[package]
name = "drone-raspberrypi-pico"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-raspberrypi-pico/0.15/drone_raspberrypi_pico/"
readme = "README.md"
keywords = [
    "rp2040",
    "raspberrypi",
    "pico",
    "rtos",
    "bare-metal",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
Raspberry Pi Pico (RP2040) support for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["periph-all"]
std = ["drone-raspberrypi-pico-sdk/std", "drone-core/std", "drone-cortexm/std"]
periph-clock = ["drone-raspberrypi-pico-map-periph-clock"]
periph-gpio = ["drone-raspberrypi-pico-map-periph-gpio"]
periph-pll = ["drone-raspberrypi-pico-map-periph-pll"]
periph-all = ["periph-clock", "periph-gpio", "periph-pll"]
all = ["periph-all"]

[dependencies]
drone-core.workspace = true
drone-cortexm.workspace = true
drone-raspberrypi-pico-map-periph-clock = { workspace = true, optional = true }
drone-raspberrypi-pico-map-periph-gpio = { workspace = true, optional = true }
drone-raspberrypi-pico-map-periph-pll = { workspace = true, optional = true }
drone-raspberrypi-pico-map-pieces.workspace = true
drone-raspberrypi-pico-map-pieces-traits.workspace = true
drone-raspberrypi-pico-sdk.workspace = true
