[package]
name = "drone-raspberrypi-pico-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = """
Raw bindings to Raspberry Pi Pico SDK.
"""

[lib]
path = "lib.rs"

[features]
default = []
host = []

[build-dependencies]
bindgen = "0.61.0"
color-eyre = "0.6.2"
regex = "1.7.0"
