[package]
name = "drone-raspberrypi-pico-map-pieces"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-raspberrypi-pico/0.15/drone_raspberrypi_pico_map_pieces/"
description = """
RP2040 memory-mapped register bindings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[dependencies]
drone-core.workspace = true
drone-cortexm.workspace = true
drone-raspberrypi-pico-map-pieces-1.workspace = true
drone-raspberrypi-pico-map-pieces-2.workspace = true
drone-raspberrypi-pico-map-pieces-3.workspace = true
drone-raspberrypi-pico-map-pieces-4.workspace = true
drone-raspberrypi-pico-map-pieces-5.workspace = true
drone-raspberrypi-pico-map-pieces-6.workspace = true
drone-raspberrypi-pico-map-pieces-7.workspace = true
drone-raspberrypi-pico-map-pieces-8.workspace = true
drone-raspberrypi-pico-map-pieces-9.workspace = true
drone-raspberrypi-pico-map-pieces-10.workspace = true
drone-raspberrypi-pico-map-pieces-11.workspace = true
drone-raspberrypi-pico-map-pieces-12.workspace = true

[build-dependencies]
drone-raspberrypi-pico-svd.workspace = true
